# streamer

./: CMakeLists.txt  README.md
doc/: libjpeg-turbo-1.2.1编译和使用.md  x264编译.md  使用mjpg-streamer实现网络监控.md
http/src/: CMakeLists.txt  Http.cpp  Http.h  StreamDownload.cpp  StreamDownload.h
http/test/: CMakeLists.txt  TestHttp.cpp  TestStreamDownload.cpp
jpg2yuv/test/: CMakeLists.txt  TestJpg2RGB.cpp
shdl/include/shdl/: IStreamDownload.h
shdl/src/: CMakeLists.txt  Http.cpp  Http.h  StreamDownload.cpp  StreamDownload.h
shdl/test/: CMakeLists.txt  TestHttp.cpp  TestStreamDownload.cpp
test/: dns_parse.cpp
yuv2h264/src/: CMakeLists.txt  X264Encoder.cpp
yuv2h264/test/: CMakeLists.txt  TestX264Encoder.cpp  VideoCapture.cpp  VideoCapture.h
yuvconverter/include/: yuvconverter.h
yuvconverter/src/: CMakeLists.txt
yuvconverter/test/: CMakeLists.txt  TestYuvConverter.cpp
